# placeplace

./: .gitignore  .prettierrc.json  Cargo.toml  package.json  rangefinder.html  readme.md
crates/rangefinder-api/: Cargo.toml
crates/rangefinder-gui/: Cargo.toml
frontend/: Cargo.toml  build.ps1  index.js  package.json  placeplace.json  readme.md  webpack.config.js
frontend/src/: image.rs  lib.rs  palette.rs
