[package]
name = "placeplace"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
png = "0.17.5"
rand = "0.8.5"
getrandom = { version = "0.2.6", features = ["js"] }
once_cell = "1.10.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'CssStyleDeclaration',
  'CanvasRenderingContext2d',
  'HtmlCanvasElement',
  'console',
  'MouseEvent',
]
